feat: ✨ Add release workflow.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,6 @@
 	"version": "0.0.1",
 	"description": "Zero-dependency Gleam-inspired Result, Option and Pipe implementation in Typescript.",
 	"type": "module",
-	"private": "false",
 	"license": "GPL-3.0-only",
 	"packageManager": "pnpm@10.9.0",
 	"engines": {
@@ -14,6 +13,7 @@
 		"name": "Patrik Dvořáček",
 		"url": "https://dvoracek.dev"
 	},
+	"files": ["./dist"],
 	"scripts": {
 		"build": "rolldown -c rolldown.config.ts",
 		"format": "biome format --write .",
