--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
 		"name": "Patrik Dvořáček",
 		"url": "https://dvoracek.dev"
 	},
+	"files": ["./dist"],
 	"scripts": {
 		"build": "rolldown -c rolldown.config.ts",
 		"format": "biome format --write .",
