--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
+		"@cookielab.io/biome-config": "0.6.0",
 		"rolldown": "1.0.0-beta.29",
 		"rolldown-plugin-dts": "0.14.1",
 		"typescript": "5.8.3",
