--- a/packages/core/biome.json
+++ b/packages/core/biome.json
@@ -1,4 +1,7 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-	"extends": ["../../biome.jsonc"]
+	"$schema": "/node_modules/@biomejs/biome/configuration_schema.json",
+	"extends": ["../../biome.jsonc"],
+	"files": {
+		"includes": ["src/**/*.ts", "test/**/*.ts"]
+	}
 }
