fix(deps): Fix the actions/setup-node version string 4.4.0 -> v4.4.0.

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -31,7 +31,7 @@ jobs:
         with:
           version: 10.14.0
           run_install: false
-      - uses: actions/setup-node@4.4.0
+      - uses: actions/setup-node@v4.4.0
         with:
           node-version: 24.6.0
           cache: "pnpm"
