--- a/.github/workflows/core.yaml
+++ b/.github/workflows/core.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           version: 10.14.0
           run_install: false
-      - uses: actions/setup-node@4.4.0
+      - uses: actions/setup-node@v4.4.0
         with:
           node-version: 24.6.0
           cache: "pnpm"
@@ -37,7 +37,7 @@ jobs:
         with:
           version: 10.14.0
           run_install: false
-      - uses: actions/setup-node@4.4.0
+      - uses: actions/setup-node@v4.4.0
         with:
           node-version: 24.6.0
           cache: "pnpm"
@@ -58,7 +58,7 @@ jobs:
         with:
           version: 10.14.0
           run_install: false
-      - uses: actions/setup-node@4.4.0
+      - uses: actions/setup-node@v4.4.0
         with:
           node-version: 24.6.0
           cache: "pnpm"
@@ -78,7 +78,7 @@ jobs:
         with:
           version: 10.14.0
           run_install: false
-      - uses: actions/setup-node@4.4.0
+      - uses: actions/setup-node@v4.4.0
         with:
           node-version: 24.6.0
           cache: "pnpm"
