--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
           version: 10.14.0
           run_install: false
 
-      - uses: actions/setup-node@4.4.0
+      - uses: actions/setup-node@v4.4.0
         with:
           node-version: 24.6.0
           registry-url: "https://registry.npmjs.org"
